--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.7"
+        "php": ">=5.6.7",
+        "dazzle-php/event": "0.5.*",
+        "dazzle-php/loop": "0.5.*",
+        "dazzle-php/promise": "0.5.*",
+        "dazzle-php/throwable": "0.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8.0 <5.4.0"
